@@ -32,7 +32,8 @@
 #ifdef HAVE_SYS_TYPES_H
 #	include <sys/types.h>
 #endif
-#include <regex.h>
+
+#include <wx/regex.h>
 
 #ifdef PHP_STANDALONE_EN
 #include <map>
@@ -148,7 +149,7 @@ bool operator<(const SortElem &o1, const SortElem &o2)
 	value_value_free(&SortElem::callback->params[0].si_var->var->value);
 	value_value_free(&SortElem::callback->params[1].si_var->var->value);
 	
-	return result.int_val;
+	return result.int_val != 0;
 }
 
 void php_native_usort(PHP_VALUE_NODE *)
@@ -314,56 +315,48 @@ void php_native_split(PHP_VALUE_NODE *result)
 		php_report_error(PHP_ERROR, "Invalid or missing argument: string");
 		return;		
 	}
-	regex_t preg;
-	char error_buff[256];
-	int reg_result = regcomp(&preg, pattern->str_val, REG_EXTENDED);
-	if ( reg_result ) {
-		regerror(reg_result, &preg, error_buff, sizeof(error_buff));
-		php_report_error(PHP_ERROR, "Failed in regcomp: %s", error_buff);
+	wxRegEx preg;
+	if (!preg.Compile(wxString(char2unicode(pattern->str_val)), wxRE_EXTENDED)) {
+		php_report_error(PHP_ERROR, "Failed in Compile of: %s", pattern->str_val);
 		return;
 	}
-	size_t nmatch = strlen(string_to_split->str_val);
-	regmatch_t *pmatch = new regmatch_t[nmatch];
-	
 	char *str_2_match = string_to_split->str_val;
 	char *tmp_buff = new char[strlen(string_to_split->str_val)+1];
 	
 	while ( 1 ) {
 //		printf("matching: %s\n", str_2_match);
-		reg_result = regexec(&preg, str_2_match, nmatch, pmatch, 0);
-		if ( reg_result ) {
+		if (!preg.Matches(wxString(char2unicode(str_2_match)))) {
 			// no match
 			break;
 		}
-//		for(int i = 0; pmatch[i].rm_so >= 0; i++) {
-//			printf("match [%d] %d - %d\n", i, pmatch[i].rm_so, pmatch[i].rm_eo);
-//		}
+		// get matching position
+		size_t start, len;
+		if (!preg.GetMatch(&start, &len)) {
+			break;	// shouldn't happen
+		}
 	
 		/*
 		 * I will use only first match, since I don't see any sense to have more
 		 * then 1 match in split() call
 		 */
-		for(int i = 0; i < pmatch[0].rm_so; i++) {
+		for(size_t i = 0; i < start; i++) {
 			tmp_buff[i] = str_2_match[i];
 		}
-		tmp_buff[pmatch[0].rm_so] = 0;
+		tmp_buff[start] = 0;
 //		printf("Match added [%s]\n", tmp_buff);
 		
 		PHP_VAR_NODE *match_val = array_push_back(result);
 		match_val->value.type = PHP_VAL_STRING;
 		match_val->value.str_val = strdup(tmp_buff);
 
-		str_2_match += pmatch[0].rm_eo;
+		str_2_match += start + len;
 	}
 
 	PHP_VAR_NODE *match_val = array_push_back(result);
 	match_val->value.type = PHP_VAL_STRING;
 	match_val->value.str_val = strdup(str_2_match);
 	
-	delete [] pmatch;
 	delete [] tmp_buff;
-	
-	regfree(&preg);
 }
 
 #ifdef ENABLE_NLS
@@ -604,7 +597,8 @@ CPhpFilter::CPhpFilter(CWebServerBase *server, CSession *sess,
 	int size = ftell(f);
 	char *buf = new char [size+1];
 	rewind(f);
-	fread(buf, 1, size, f);
+	// fread may actually read less if it is a CR-LF-file in Windows
+	size = fread(buf, 1, size, f);
 	buf[size] = 0;
 	fclose(f);
 	char *scan_ptr = buf;
